# ComfyUI-DiT360Plus

./: .gitignore  CLAUDE.md  README.md  __init__.py  install.py  nodes_editing.py  nodes_enhancement.py  nodes_flux_pano.py  nodes_kontext.py  nodes_pipeline.py  nodes_projection.py  pyproject.toml  requirements.txt
examples/: DiT360_inpainting.json  LatLong_persp_inpainting.json  inpainting_outpainting.json  text_to_panorama.json
pipeline/: __init__.py  attn_processor.py  dit360_inversion.py  dit360_txt2pano.py
utils/: __init__.py  equirect.py  masks.py  perspective.py
web/js/: equirect360_viewer.js  flux_pano_loader_widgets.js
