[project]
name = "comfyui-dit360plus"
description = "ComfyUI nodes for DiT360 panoramic image generation with inpainting and outpainting support."
version = "1.0.0"
license = {text = "Apache-2.0"}

dependencies = [
    "diffusers>=0.25.0",
    "transformers>=4.28.1",
    "accelerate>=0.26.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.2",
]

[project.urls]
Repository = "https://github.com/thomashollier/ComfyUI-DiT360Plus"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-DiT360Plus"
Icon = ""
